# isomorph

./: .gitmodules  .gitmodules.save  CMakeLists.txt  checker.hpp  common.hpp  isomorph.hpp  lex_mst_node.hpp  view.hpp
demo/: CMakeLists.txt  el_pintor.cpp
src/: checker.cpp  isomorph.cpp  lex_mst_node.cpp  ordering.hpp  utility.cpp  utility.hpp  view.cpp
